--- a/reviews.html
+++ b/reviews.html
@@ -76,12 +76,7 @@
                 </ul>
             </nav>
 
-            <!--Dark Mode toggle-->
-            <button id="dark-mode-toggle">
-                <!--Moon is an inline SVG so you can edit the color if needed-->
-                <svg class="moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 480" style="enable-background:new 0 0 480 480" xml:space="preserve"><path d="M459.782 347.328c-4.288-5.28-11.488-7.232-17.824-4.96-17.76 6.368-37.024 9.632-57.312 9.632-97.056 0-176-78.976-176-176 0-58.4 28.832-112.768 77.12-145.472 5.472-3.712 8.096-10.4 6.624-16.832S285.638 2.4 279.078 1.44C271.59.352 264.134 0 256.646 0c-132.352 0-240 107.648-240 240s107.648 240 240 240c84 0 160.416-42.688 204.352-114.176 3.552-5.792 3.04-13.184-1.216-18.496z"/></svg>
-                <img class="sun" aria-hidden="true" src="/images/sun.svg" decoding="async" alt="moon" width="15" height="15">
-            </button>
+          
 
             <!--Mobile Nav toggle-->
             <button class="hamburger-menu">
@@ -116,10 +111,13 @@
                         <img class="profile" loading="lazy" decoding="async" src="/images/profile.svg" alt="" width="99" height="99">
                      </picture>
                      <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                        Reyna was fantastic! With little to no input from me, she gave me one of the best haircuts I've ever had! This is where I'll be getting my haircut from now on.
+<p>
+Since that haircut I've had Javier, Chino, and Oscar cut my hair as well. Every time I get my hair cut at El Teca I get all kinds of compliments. It never fails!
+</p>
                      </p>
                      <div class="star-group">
-                        <span class="name">B Miller<span class="desc">Homeowner</span></span>
+                        <span class="name">Justin </span>
                          <picture>
                             <img aria-hidden="true" loading="lazy" decoding="async" src="/images/stars.svg" alt="stars" width="91" height="15">
                          </picture>
@@ -130,10 +128,10 @@
                         <img class="profile" loading="lazy" decoding="async" src="/images/profile.svg" alt="" width="99" height="99">
                      </picture>
                      <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                        I have been coming here for over 4 years and have never ever had a bad experience. Oscar is amazing at cutting hair and even better with curly hair.
                      </p>
                      <div class="star-group">
-                        <span class="name">Vincent M.<span class="desc">Homeowner</span></span>
+                        <span class="name">Adrien Mendez</span>
                          <picture>
                             <img aria-hidden="true" loading="lazy" decoding="async" src="/images/stars.svg" alt="stars" width="91" height="15">
                          </picture>
