--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <link rel="stylesheet" href="/css/local.css">
     </noscript>
 
-    <title>El Teca | Barbershop | Big Lake, WI</title>
+    <title>El Teca | Barbershop | Big Lake MN</title>
 </head>
 <body>
     <!--Screen reader skip main nav-->
